--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@ionic-native/camera": "^5.30.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/crop": "^5.30.0",
+    "@ionic-native/facebook": "^5.30.0",
     "@ionic-native/file": "^5.30.0",
     "@ionic-native/file-path": "^5.30.0",
     "@ionic-native/file-transfer": "^5.30.0",
+    "@ionic-native/google-plus": "^5.30.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
