--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@ionic-native/camera": "^5.30.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/crop": "^5.30.0",
-    "@ionic-native/facebook": "^5.30.0",
+    "@ionic-native/facebook": "^5.32.1",
     "@ionic-native/file": "^5.30.0",
     "@ionic-native/file-path": "^5.30.0",
     "@ionic-native/file-transfer": "^5.30.0",
@@ -55,7 +55,6 @@
     "cordova-android": "^9.0.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-facebook4": "^6.4.0",
-    "cordova-plugin-googleplus": "^8.5.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -85,10 +84,12 @@
       },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-facebook4": {
-        "APP_ID": "290796082669378",
-        "APP_NAME": "FoodForLife"
+        "APP_ID": "956124408469355",
+        "APP_NAME": "FFlG Donate"
       },
-      "cordova-plugin-googleplus": {}
+      "cordova-plugin-googleplus": {
+        "REVERSED_CLIENT_ID": "com.googleusercontent.apps.616880040152-f2b6ak0o95f8sqjfmafpj2em396k1bpu"
+      }
     },
     "platforms": [
       "android"
