--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@ionic-native/file-path": "^5.36.0",
     "@ionic-native/file-transfer": "^5.36.0",
     "@ionic-native/google-plus": "^5.36.0",
+    "@ionic-native/paypal": "^5.36.0",
     "@ionic-native/social-sharing": "^5.36.0",
     "@ionic-native/splash-screen": "^5.36.0",
     "@ionic-native/status-bar": "^5.36.0",
     "@ionic/angular": "^5.8.1",
+    "com.paypal.cordova.mobilesdk": "^3.5.0",
     "cordova": "^10.0.0",
     "cordova-res": "^0.15.3",
     "crypto-js": "^4.1.1",
@@ -54,10 +56,12 @@
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "^2.0.10",
     "@types/node": "^12.20.26",
+    "card.io.cordova.mobilesdk": "^2.1.0",
     "codelyzer": "^6.0.2",
     "cordova-android": "^9.1.0",
     "cordova-browser": "^6.0.0",
     "cordova-plugin-androidx": "^3.0.0",
+    "cordova-plugin-apple-pay-google-pay": "^1.1.2",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-facebook4": "^6.4.0",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
@@ -99,7 +103,9 @@
         "REVERSED_CLIENT_ID": "com.googleusercontent.apps.616880040152-f2b6ak0o95f8sqjfmafpj2em396k1bpu"
       },
       "cordova-plugin-x-socialsharing": {},
-      "cordova-plugin-androidx": {}
+      "cordova-plugin-androidx": {},
+      "com.paypal.cordova.mobilesdk": {},
+      "cordova-plugin-apple-pay-google-pay": {}
     },
     "platforms": [
       "android"
