--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
     "@capacitor/core": "3.2.3",
+    "@ionic-native/app-launcher": "^5.36.0",
     "@ionic-native/camera": "^5.36.0",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/crop": "^5.36.0",
@@ -32,6 +33,7 @@
     "@ionic-native/social-sharing": "^5.36.0",
     "@ionic-native/splash-screen": "^5.36.0",
     "@ionic-native/status-bar": "^5.36.0",
+    "@ionic-native/web-intent": "^5.36.0",
     "@ionic/angular": "^5.8.1",
     "com.paypal.cordova.mobilesdk": "^3.5.0",
     "cordova": "^10.0.0",
@@ -58,6 +60,7 @@
     "@types/node": "^12.20.26",
     "card.io.cordova.mobilesdk": "^2.1.0",
     "codelyzer": "^6.0.2",
+    "com-darryncampbell-cordova-plugin-intent": "^2.0.0",
     "cordova-android": "^9.1.0",
     "cordova-browser": "^6.0.0",
     "cordova-plugin-androidx": "^3.0.0",
@@ -105,7 +108,8 @@
       "cordova-plugin-x-socialsharing": {},
       "cordova-plugin-androidx": {},
       "com.paypal.cordova.mobilesdk": {},
-      "cordova-plugin-apple-pay-google-pay": {}
+      "cordova-plugin-apple-pay-google-pay": {},
+      "com-darryncampbell-cordova-plugin-intent": {}
     },
     "platforms": [
       "android"
