--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~10.0.0",
     "@capacitor/core": "3.2.3",
     "@ionic-native/app-launcher": "^5.36.0",
+    "@ionic-native/apple-pay": "^5.36.0",
     "@ionic-native/camera": "^5.36.0",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/crop": "^5.36.0",
@@ -65,6 +66,7 @@
     "cordova-browser": "^6.0.0",
     "cordova-plugin-androidx": "^3.0.0",
     "cordova-plugin-apple-pay-google-pay": "^1.1.2",
+    "cordova-plugin-applepay": "^5.0.0",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-facebook4": "^6.4.0",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
